// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Tag Clickable 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-eGRUor kTpGsm"
    >
      <button
        class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT cGuTUx"
        type="button"
      >
        <div
          class="sc-gKclnd exdBHI sc-iCfMLu iBWwlp sc-hGPBjI sc-gsNilK dljPk eoNTEj"
        >
          <div
            class="sc-fKVqWL gNOvvf sc-bBHxTw ggLQNJ"
          >
            Tag: 
          </div>
          <div
            class="sc-fKVqWL Gjjzu sc-bBHxTw ggLQNJ"
          >
            Value
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Closable 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-eGRUor kTpGsm"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu iBWwlp sc-hGPBjI sc-gsNilK dljPk eoNTEj"
      >
        <div
          class="sc-fKVqWL gNOvvf sc-bBHxTw ggLQNJ"
        >
          Tag: 
        </div>
        <div
          class="sc-fKVqWL Gjjzu sc-bBHxTw ggLQNJ"
        >
          Value
        </div>
      </div>
      <button
        class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT eYfnOw sc-bXTejn dguils"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-xmark "
          data-icon="xmark"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-eGRUor kTpGsm"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu iBWwlp sc-hGPBjI sc-gsNilK dljPk eoNTEj"
      >
        <div
          class="sc-fKVqWL gNOvvf sc-bBHxTw ggLQNJ"
        >
          Tag: 
        </div>
        <div
          class="sc-fKVqWL Gjjzu sc-bBHxTw ggLQNJ"
        >
          Value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Empty 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-eGRUor kTpGsm"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu iBWwlp sc-hGPBjI sc-gsNilK dljPk eoNTEj"
      >
        <div
          class="sc-fKVqWL ckeoLF sc-bBHxTw ggLQNJ"
        >
          no value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Multiple Values 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-eGRUor kTpGsm"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu iBWwlp sc-hGPBjI sc-gsNilK dljPk eoNTEj"
      >
        <div
          class="sc-fKVqWL gNOvvf sc-bBHxTw ggLQNJ"
        >
          Tag1 contains 
        </div>
        <div
          class="sc-fKVqWL Gjjzu sc-bBHxTw ggLQNJ"
        >
          value1
        </div>
        <div
          class="sc-fKVqWL dqLrLx sc-bBHxTw ggLQNJ"
        >
            or  
        </div>
        <div
          class="sc-fKVqWL gNOvvf sc-bBHxTw ggLQNJ"
        >
          Tag2 contains 
        </div>
        <div
          class="sc-fKVqWL Gjjzu sc-bBHxTw ggLQNJ"
        >
          value2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Only Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-eGRUor kTpGsm"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu iBWwlp sc-hGPBjI sc-gsNilK dljPk eoNTEj"
      >
        <div
          class="sc-fKVqWL Gjjzu sc-bBHxTw ggLQNJ"
        >
          Name
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Only Value 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-eGRUor kTpGsm"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu iBWwlp sc-hGPBjI sc-gsNilK dljPk eoNTEj"
      >
        <div
          class="sc-fKVqWL Gjjzu sc-bBHxTw ggLQNJ"
        >
          Value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Overflow 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk sc-eGRUor kTpGsm"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu iBWwlp sc-hGPBjI sc-gsNilK dljPk eoNTEj"
      >
        <div
          class="sc-fKVqWL gNOvvf sc-bBHxTw ggLQNJ"
        >
          Tag1 contains 
        </div>
        <div
          class="sc-fKVqWL Gjjzu sc-bBHxTw ggLQNJ"
        >
          value1
        </div>
        <div
          class="sc-fKVqWL gNOvvf sc-bBHxTw ggLQNJ"
        >
          ... and 3 more
        </div>
      </div>
    </div>
  </div>
</div>
`;
